# xWallet-axum

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
src/: config.rs  error.rs  main.rs  response.rs
src/handlers/: bitcoin_wallet.rs  ethereum_wallet.rs
src/model/: bitcoin_wallet.rs  ethereum_wallet.rs
src/routes/: bitcoin_wallet.rs  ethereum_wallet.rs
src/services/: bitcoin_wallet.rs  bitcoin_wallet_transaction.rs  ethereum_wallet.rs  mod.rs
