[package]
name = "xWallet-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum 웹 프레임워크
axum = { version = "0.8.4" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors", "trace", "fs"] }

# 비동기 런타임
tokio = { version = "1.45.1", features = ["full"] }

# 직렬화/역직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 비트코인 지갑 관련
bdk_wallet = { version = "1.1.0", features = [
    "file_store",
    "rusqlite",
    "all-keys"] }
bdk_electrum = "0.20.1"
bip39 = { version = "2.1.0", features = ["rand"] }

# 이더리움 지갑 관련
alloy = { version = "1.0.6", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "eips",
] }
rand = "0.8"
hex = "0.4"

# 환경설정
dotenv = "0.15"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 에러 핸들링
eyre = "0.6"
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 시간
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
url = "2.5.4"

# HTTP 클라이언트 (alloy가 내부적으로 사용)
reqwest = { version = "0.11", features = ["json"] }




